[FIX] rating: Extra border line on the rating image
The 'btn' class was incorrectly applied to the rating label in
rating_templates.xml, which affected the styling, making extra border
line displaying on the rating image. Forcely remove the border in the
CSS file to make the border invisible.

Task ID: 4482430
Related Commit: https://github.com/odoo/odoo/commit/22c3cc51eda7f126178d70f765f846e411fe2d0a

--- a/addons/rating/static/src/scss/rating_templates.scss
+++ b/addons/rating/static/src/scss/rating_templates.scss
@@ -11,6 +11,7 @@
     }
     .o_rating_label {
         opacity: 0.5;
+        border: none !important;
         &:hover {
             transform: scale(1.1);
         }
